BE07 Unreal’s Class System

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=719DA0BE4D4B51672725F29816172634
+CompanyName=JinYoung Lim
+CompanyDistinguishedName=JinYoung Lim
+CopyrightNotice=Copyright JinYoung Lim 2017.
 
 [StartupActions]
 bAddPacks=True
